// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Select Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <label
    className="label"
  >
    <span
      className="span is-hide"
    >
      Select
    </span>
    <select
      aria-label="Select"
      className="container"
      id="#1"
      onChange={[Function]}
      value={2}
    >
      <option
        value={null}
      />
      <option
        value={1}
      >
        First
      </option>
      <option
        value={2}
      >
        Second
      </option>
      <option
        value={3}
      >
        Third
      </option>
    </select>
  </label>
</div>
`;

exports[`Storyshots Atoms/Select Inline 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <label
    className="label"
  >
    <span
      className="span is-hide"
    >
      Select
    </span>
    <select
      aria-label="Select"
      className="container is-inline"
      id="#3"
      onChange={[Function]}
      value={2}
    >
      <option
        value={null}
      />
      <option
        value={1}
      >
        First
      </option>
      <option
        value={2}
      >
        Second
      </option>
      <option
        value={3}
      >
        Third
      </option>
    </select>
  </label>
</div>
`;

exports[`Storyshots Atoms/Select Label Show 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <label
    className="label"
  >
    <span
      className="span"
    >
      Select
    </span>
    <select
      aria-label="Select"
      className="container"
      id="#4"
      onChange={[Function]}
      value={2}
    >
      <option
        value={null}
      />
      <option
        value={1}
      >
        First
      </option>
      <option
        value={2}
      >
        Second
      </option>
      <option
        value={3}
      >
        Third
      </option>
    </select>
  </label>
</div>
`;

exports[`Storyshots Atoms/Select Value 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <label
    className="label"
  >
    <span
      className="span is-hide"
    >
      Select
    </span>
    <select
      aria-label="Select"
      className="container"
      id="#2"
      onChange={[Function]}
      value={2}
    >
      <option
        value={null}
      />
      <option
        value={1}
      >
        First
      </option>
      <option
        value={2}
      >
        Second
      </option>
      <option
        value={3}
      >
        Third
      </option>
    </select>
  </label>
</div>
`;
